--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
 /* Hero */
 .hero {
     background: linear-gradient(to right, var(--secondary-color), #ff9966);
+    /* background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%); */
     color: var(--text-light);
     padding: 4rem 0;
     text-align: center;
@@ -416,4 +417,42 @@ h2 {
 
 .social-links a:hover {
     background: #2980b9;
+}
+
+use {
+    animation: move-forever 2s linear infinite;
+
+    &:nth-child(2) {
+        animation-duration: 2.5s;
+        animation-delay: -1.5s;
+    }
+
+    &:nth-child(1) {
+        animation-duration: 5s
+    }
+}
+
+@keyframes move-forever {
+    0% {
+        transform: translate(-2px, 0)
+    }
+
+    100% {
+        transform: translate(0px, 0)
+    }
+}
+
+svg {
+    display: block;
+    width: 100%;
+    height: 60px;
+    position: relative;
+    margin-top: -55px;
+}
+
+@media (max-width: 768px) {
+    .svg {
+        flex-direction: column;
+        text-align: center;
+    }
 }
