--- a/style.css
+++ b/style.css
@@ -65,6 +65,70 @@ body {
     color: var(--secondary-color);
 }
 
+.nav {
+    display: flex;
+    gap: 20px;
+}
+
+/* Hamburger */
+.menu-toggle {
+    display: none;
+}
+
+.hamburger {
+    display: none;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+    width: 30px;
+    height: 25px;
+    justify-content: center;
+}
+
+.hamburger .bar {
+    height: 3px;
+    width: 100%;
+    background-color: var(--text-light);
+    border-radius: 2px;
+    transition: 0.3s;
+}
+
+@media (max-width: 768px) {
+    .hamburger {
+        display: flex;
+    }
+
+    .nav {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: var(--bg-dark);
+        padding: 1rem 0;
+        text-align: center;
+    }
+
+    .menu-toggle:checked+.hamburger+.nav {
+        display: flex;
+    }
+
+    /* Animate Hamburger into X */
+    .menu-toggle:checked+.hamburger .bar:nth-child(1) {
+        /* transform: rotate(45deg) translate(5px, 5px); */
+        transform: rotate(45deg) translate(7px, 5px);
+    }
+
+    .menu-toggle:checked+.hamburger .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-toggle:checked+.hamburger .bar:nth-child(3) {
+        transform: rotate(-45deg) translate(5px, -5px);
+    }
+}
+
 .logo a {
     color: var(--text-light);
     text-decoration: none;
@@ -232,9 +296,9 @@ body {
 
 /* Responsive */
 @media (max-width: 768px) {
-    .header .container {
+    /* .header .container {
         flex-direction: column;
-    }
+    } */
 
     .nav {
         margin-top: 1rem;
